--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:push": "npx prisma db push"
+    "db:push": "npx prisma db push",
+    "db:rm": "docker compose rm dev-db -s -f -v",
+    "db:up": "docker compose up dev-db -d",
+    "db:restart": "yarn db:rm & yarn db:up"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.7.1",
+    "argon2": "^0.31.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "prisma": "^5.7.1",
